# axum-image-mytutorial

./: README.md  flake.nix
client/: .env.example  package.json  pnpm-lock.yaml
client/src/: App.tsx
client/src/validation/: sample.ts
server/: .env.example  Cargo.toml
server/src/: error.rs  main.rs  model.rs  r2.rs
